--- a/cad/dinotrace/Makefile
+++ b/cad/dinotrace/Makefile
@@ -1,17 +1,17 @@
-# $NetBSD: Makefile,v 1.38 2006/03/30 03:44:41 jlam Exp $
+# $NetBSD: Makefile,v 1.39 2007/02/22 19:26:09 wiz Exp $
 #
 
-DISTNAME=	dinotrace-9.3a
-PKGREVISION=	2
+DISTNAME=	dinotrace-9.3c
 CATEGORIES=	cad
 MASTER_SITES=	http://www.veripool.com/ftp/
+EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	dmcmahill@NetBSD.org
 HOMEPAGE=	http://www.veripool.com/dinotrace/
 COMMENT=	Tool for viewing the output of digital simulators
 
 GNU_CONFIGURE=		YES
-INFO_FILES=		# PLIST
+INFO_FILES=		YES
 USE_TOOLS+=		gmake perl
 
 .include "../../mk/motif.buildlink3.mk"
