--- a/cad/dinotrace-mode/Makefile
+++ b/cad/dinotrace-mode/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.5 2006/02/05 23:08:20 joerg Exp $
+# $NetBSD: Makefile,v 1.6 2007/02/22 19:26:10 wiz Exp $
 #
 
-DISTNAME=	dinotrace-9.3a
-PKGNAME=	${EMACS_PKGNAME_PREFIX}dinotrace-mode-9.3a
-PKGREVISION=	1
+DISTNAME=	dinotrace-9.3c
+PKGNAME=	${EMACS_PKGNAME_PREFIX}dinotrace-mode-9.3c
 CATEGORIES=	cad editors
 MASTER_SITES=	http://www.veripool.com/ftp/
+EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	dmcmahill@NetBSD.org
 HOMEPAGE=	http://www.veripool.com/dinotrace/
