--- a/converters/bibtex2html/Makefile
+++ b/converters/bibtex2html/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2006/08/10 03:21:39 minskim Exp $
+# $NetBSD: Makefile,v 1.21 2007/01/07 09:13:49 rillig Exp $
 
-DISTNAME=	bibtex2html-1.82
+DISTNAME=	bibtex2html-1.85
 CATEGORIES=	converters
 MASTER_SITES=	http://www.lri.fr/~filliatr/ftp/bibtex2html/
 
