--- a/devel/global/Makefile
+++ b/devel/global/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.23 2006/11/14 14:14:52 obache Exp $
+# $NetBSD: Makefile,v 1.24 2007/02/22 19:01:17 wiz Exp $
 #
 
-DISTNAME=	global-5.2
+DISTNAME=	global-5.4
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU:=global/} \
 		http://www.tamacom.com/global/
