--- a/databases/p5-DBD-Oracle/Makefile
+++ b/databases/p5-DBD-Oracle/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2006/03/04 21:29:09 jlam Exp $
+# $NetBSD: Makefile,v 1.8 2007/01/02 12:13:39 rillig Exp $
 
-DISTNAME=	DBD-Oracle-1.14
+DISTNAME=	DBD-Oracle-1.19
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBD/}
 
