--- a/multimedia/xvid4conf/Makefile
+++ b/multimedia/xvid4conf/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.11 2006/03/04 21:30:16 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2006/04/17 13:46:42 wiz Exp $
 
 DISTNAME=	xvid4conf-1.12
 PKGREVISION=	4
 CATEGORIES=	multimedia
-MASTER_SITES=	http://zebra.fh-weingarten.de/~transcode/xvid4conf/
+MASTER_SITES=	#
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://zebra.fh-weingarten.de/~transcode/
 COMMENT=	XviD Configuration Panel
 
 USE_TOOLS+=	pkg-config
