--- a/misc/lile/Makefile
+++ b/misc/lile/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2005/07/15 18:27:52 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2006/03/04 21:30:11 jlam Exp $
 
 DISTNAME=	lile-2.0
 PKGNAME=	ile-2.0
@@ -8,6 +8,9 @@ EXTRACT_SUFX=	.tar.z
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Input Line Editor that wraps itself around programs
+
+# uses struct sgttyb
+NOT_FOR_PLATFORM=	Linux-*-*
 
 USE_TOOLS+=	gzcat
 
