--- a/sysutils/checkperms/Makefile
+++ b/sysutils/checkperms/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2007/03/05 02:38:33 dbj Exp $
+# $NetBSD: Makefile,v 1.8 2007/03/05 23:06:30 rillig Exp $
 #
 
 DISTNAME=	checkperms-1.7
@@ -12,5 +12,10 @@ COMMENT=	Check and correct file permissions
 INSTALLATION_DIRS=	bin ${PKGMANDIR}/cat1 ${PKGMANDIR}/man1
 
 USE_BSD_MAKEFILE=	yes
+
+.include "../../mk/bsd.prefs.mk"
+.if ${OPSYS} == "Linux"
+MAKE_ENV+=	NOGCCERROR=yes		# see PR 35930
+.endif
 
 .include "../../mk/bsd.pkg.mk"
