--- a/games/moria/Makefile
+++ b/games/moria/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2003/07/17 21:39:03 grant Exp $
+# $NetBSD: Makefile,v 1.9 2004/01/20 12:15:41 agc Exp $
 
 DISTNAME=		um5.5.2
 PKGNAME=		moria-5.5.2
@@ -13,6 +13,7 @@ HOMEPAGE=		http://www-math.bgsu.edu/~grabine/moria.html
 COMMENT=		Rogue-like game with a different sense of scale than Rogue
 
 WRKSRC=			${WRKDIR}/umoria
+MAKE_FLAGS+=		CURSES=-lncurses
 
 do-configure:
 	@${RM} -f ${WRKSRC}/*.[ch] ${WRKSRC}/Makefile
@@ -24,4 +25,5 @@ post-install:
 			/var/games/moria.scores ; \
 	fi
 
+.include "../../devel/ncurses/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
