--- a/devel/flex/Makefile
+++ b/devel/flex/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2007/01/31 15:38:33 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.22 2007/02/05 19:54:36 markd Exp $
 
 DISTNAME=		flex-2.5.33
 PKGREVISION=		2
@@ -14,6 +14,7 @@ USE_TOOLS+=		bison gm4:run makeinfo
 MAKE_JOBS_SAFE=		no
 TEST_TARGET=		check
 INFO_FILES=		yes
+CPPFLAGS.IRIX+=		-DHAVE_ALLOCA_H		# bug #1675899
 LIBS.SunOS+=		-lm
 USE_PKGLOCALEDIR=	YES
 
