--- a/regress/Makefile
+++ b/regress/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2006/07/11 05:03:11 rillig Exp $
+# $NetBSD: Makefile,v 1.15 2006/09/06 03:37:54 ben Exp $
 #
 
 COMMENT=	Regression tests for pkgsrc infrastructure
@@ -15,6 +15,7 @@ SUBDIR+=	make-quoting
 SUBDIR+=	pkg-options
 SUBDIR+=	pkgfail
 SUBDIR+=	print-plist
+SUBDIR+=	subst
 SUBDIR+=	tools
 
 .include "../mk/bsd.pkg.subdir.mk"
