--- a/mail/thunderbird-gtk1/Makefile
+++ b/mail/thunderbird-gtk1/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2006/10/23 10:49:34 markd Exp $
+# $NetBSD: Makefile,v 1.12 2006/11/08 13:15:40 ghen Exp $
 
 MOZILLA=	thunderbird-gtk1
+PKGREVISION=	1
 
 COMMENT=	Mozilla mail client using the older GTK1 toolkit
 
