--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.23 2007/02/04 00:15:48 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.24 2007/03/02 14:12:24 ghen Exp $
 
 MOZILLA=		thunderbird
 COMMENT=		Mozilla mail client
+PKGREVISION=		1
 
 MOZILLA_USE_GTK2=	# yes
 MOZILLA_USE_XFT=	YES
