--- a/www/firefox2-gtk1/Makefile
+++ b/www/firefox2-gtk1/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2006/12/06 20:38:39 joerg Exp $
+# $NetBSD: Makefile,v 1.4 2006/12/21 08:13:17 ghen Exp $
 
 MOZILLA=	firefox-gtk1
+PKGREVISION=	1
 COMMENT=	Lightweight gecko-based web browser built with GTK+-1.x
 
 .include "../../www/firefox2/Makefile-firefox.common"
