--- a/www/seamonkey/Makefile
+++ b/www/seamonkey/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2007/02/20 16:02:11 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.19 2007/03/05 11:46:21 ghen Exp $
 
 MOZILLA=		seamonkey
+PKGREVISION=		1
 
 COMMENT=		Full featured gecko-based browser
 
