--- a/www/lynx/Makefile
+++ b/www/lynx/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.93 2006/11/05 17:37:55 joerg Exp $
+# $NetBSD: Makefile,v 1.94 2006/11/10 00:08:46 rillig Exp $
 
 #
 # NOTE: Please do not enable the lynxcgi feature unless it is lynx
@@ -33,7 +33,7 @@ WRKSRC=			${WRKDIR}/${DISTNAME:S/./-/g}
 USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
 INSTALL_TARGET=		install-full install-lss
-MAKE_FILE=       	makefile
+MAKE_FILE=		makefile
 
 CONFIGURE_ENV+=		GZIP=${TOOLS_GZIP_CMD:Q}
 USE_TOOLS+=		gzip msgfmt
