--- a/databases/p5-DBI/Makefile
+++ b/databases/p5-DBI/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.34 2006/02/15 23:09:58 abs Exp $
+# $NetBSD: Makefile,v 1.35 2006/03/04 21:29:09 jlam Exp $
 
-DISTNAME=	DBI-1.50
+DISTNAME=	DBI-1.54
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5dbi
 CATEGORIES=	databases perl5
