--- a/databases/mysql5-client/Makefile.common
+++ b/databases/mysql5-client/Makefile.common
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile.common,v 1.18 2006/12/10 04:12:17 xtraeme Exp $
+# $NetBSD: Makefile.common,v 1.19 2007/02/22 19:30:03 wiz Exp $
 
-DISTNAME=		mysql-5.0.27
+DISTNAME=		mysql-5.0.37
 CATEGORIES=		databases
 MASTER_SITES=		${MASTER_SITE_MYSQL:=MySQL-5.0/}
 
