--- a/graphics/urt/Makefile
+++ b/graphics/urt/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.44 2006/09/09 02:42:01 obache Exp $
+# $NetBSD: Makefile,v 1.45 2006/11/10 17:32:24 tv Exp $
 
 DISTNAME=	urt
 PKGNAME=	urt-3.1b1
@@ -26,6 +26,11 @@ BUILD_TARGET=
 
 post-extract:
 	${CHMOD} 644 ${WRKSRC}/man/man1/rletotarga.1
+
+SUBST_CLASSES+=	man
+SUBST_STAGE.man=	pre-configure
+SUBST_FILES.man=	config/urt
+SUBST_SED.man=		's,^\(\#defpath MAN_DEST\).*,\1 ${PREFIX}/${PKGMANDIR},'
 
 post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/urt ${PREFIX}/share/examples/urt
